c4prj2_input/grade.txt
Grading at Sun Jan 12 02:35:25 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:12:30: error: ‘f’ undeclared (first use in this function)
          fc->decks = realloc(f->decks, (fc->n_decks+1) * sizeof(*fc->decks));
                              ^
future.c:12:30: note: each undeclared identifier is reported only once for each function it appears in
Compilation of future.c failed

Overall Grade: F
